k8s/domains/identity/infra/postgres/base/identity-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identity-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-postgres
  template:
    metadata:
      labels:
        app: identity-postgres
    spec:
      automountServiceAccountToken: false
      containers:
        - name: identity-postgres
          image: docker.io/postgres:18
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d identity
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d identity
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
