k8s/domains/identity/infra/postgres/base/identity-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identity-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-postgres
  template:
    metadata:
      labels:
        app: identity-postgres
    spec:
      containers:
        - name: identity-postgres
          image: docker.io/postgres:18
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d identity
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d identity
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

---
apiVersion: v1
kind: Service

metadata:
  name: postgres-srv
spec:
  type: ClusterIP
  selector:
    app: identity-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
