k8s/domains/identity/infra/postgres/base/identity-postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: identity-postgres
spec:
  type: ClusterIP
  selector:
    app: identity-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
