k8s/domains/identity/infra/postgres/base/identity-postgres-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-identity-runtime-to-postgres
spec:
  podSelector:
    matchLabels:
      app: identity-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: identity-api
        - podSelector:
            matchLabels:
              app: identity-cleanup
        - podSelector:
            matchLabels:
              app: identity-migrations
      ports:
        - protocol: TCP
          port: 5432
